# job-application-agent

./: .gitattributes  .gitignore  AGENTS.md  PLANS.md  README.md  job-application-agent.py  pyproject.toml
plans/: 2026-04-21-prepare-screening-workflow.md  2026-04-21-repository-reconstruction-and-backlog.md  2026-04-21-root-artifacts-and-output-normalization.md  2026-04-21-workflow-contract-alignment-and-safety.md  2026-04-22-adoptions-review-and-acceptance-workflow.md  2026-04-22-build-linkedin-workflow.md  2026-04-22-current-stack-contract-remediation.md  2026-04-22-current-workflow-completion-gate.md  2026-04-22-implement-adoptions-review-and-acceptance-workflow.md  2026-04-22-rebuild-master-workflow.md  2026-04-22-rebuild-role-resume-workflow.md  2026-04-23-export-resume-pdf-workflow.md  2026-04-23-migrate-tests-to-pytest.md  2026-04-24-analyze-vacancy-quality-upgrade.md  2026-04-24-application-agent-config-docs.md  2026-04-24-cli-llm-config-docs.md  2026-04-24-configurable-russian-prompt-skill-contract.md  2026-04-24-cover-letter-style-contract.md  2026-04-24-responses-api-and-cli-entrypoint.md  2026-04-24-russian-plan-language-guard.md  2026-04-24-translate-legacy-plans-ru.md  2026-04-28-analyze-vacancy-prompt-layer-restoration.md  2026-04-28-cover-letter-quality-remediation.md  _template.md  ingest-refactor-plan.md
tests/: test_adoptions_intake_workflow.py  test_adoptions_review_session.py  test_adoptions_review_state.py  test_analyze_workflow.py  test_build_linkedin_helpers.py  test_build_linkedin_workflow.py  test_cli.py  test_country_catalog.py  (+13 more)
(+45 files in other folders)
