[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "application-agent"
version = "0.1.0"
description = "Public workflow agent for a split public/private career workspace."
requires-python = ">=3.11"
dependencies = ["reportlab>=4.4,<5"]

[project.optional-dependencies]
dev = ["pytest>=9,<10"]

[project.scripts]
application-agent = "application_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"application_agent.data" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

